fixing the spacing and the items spacing

--- a/Lab2/styles.css
+++ b/Lab2/styles.css
@@ -68,8 +68,8 @@
 #grid-section1 .grid {
 	display: grid;
     grid-auto-rows: 100px;        
-	grid-template-columns: 150px 150px 150px 150px;
-	gap: 20px;
+	grid-template-columns: 158px 158px 158px 158px;
+	gap: 19px;
 }
 
 /* end Grid Part 1 */
